--- a/updated/projectPages/braille.html
+++ b/updated/projectPages/braille.html
@@ -93,7 +93,7 @@
 
         <div class="col-12 introContent" style="padding-top: 2rem; padding-bottom: 3rem;">
           <span class="introTextHeading">
-            Timeline (Jan '16 - May '16)
+            Timeline (Jan '16 - May '16)<br><br>
           </span>
 
             <div class="row">
