--- a/updated/projectPages/lamebot.html
+++ b/updated/projectPages/lamebot.html
@@ -89,7 +89,7 @@
 
         <div class="col-12 introContent" style="padding-top: 2rem; padding-bottom: 3rem;">
           <span class="introTextHeading">
-            Timeline (Dec '19 - April '20)
+            Timeline (Dec '19 - April '20)<br><br>
           </span>
 
             <div class="row">
