--- a/updated/projectPages/ncr.html
+++ b/updated/projectPages/ncr.html
@@ -89,7 +89,7 @@
 
         <div class="col-12 introContent" style="padding-top: 2rem; padding-bottom: 3rem;">
           <span class="introTextHeading">
-            Timeline (Aug '19 - Dec '19)
+            Timeline (Aug '19 - Dec '19)<br><br>
           </span>
 
             <div class="row">
