--- a/updated/projectPages/virtual.html
+++ b/updated/projectPages/virtual.html
@@ -114,7 +114,7 @@
 
         <div class="col-12 introContent" style="padding-top: 2rem; padding-bottom: 3rem;">
           <span class="introTextHeading">
-            Timeline (May '18 - Nov '18)
+            Timeline (May '18 - Nov '18)<br><br>
           </span>
 
             <div class="row">
