--- a/updated/projectPages/mime.html
+++ b/updated/projectPages/mime.html
@@ -109,7 +109,7 @@
 
         <div class="col-12 introContent" style="padding-top: 2rem; padding-bottom: 3rem;">
           <span class="introTextHeading">
-            Timeline (Jan '18 - May '19)
+            Timeline (Jan '18 - May '19)<br><br>
           </span>
 
             <div class="row">
