--- a/updated/projectPages/pecss.html
+++ b/updated/projectPages/pecss.html
@@ -15,6 +15,7 @@
 
   <link rel="stylesheet" type="text/css" href="../css/mainStyle.css">
   <link rel="stylesheet" type="text/css" href="../css/pageStyle.css">
+  <link rel="stylesheet" type="text/css" href="../css/stackedCards.css">
 
 </head>
 <body>
@@ -23,8 +24,8 @@
   <div class="container">
 
 
-    <div class="headingSection">
-      <div class="headingText color2">
+    <div class="topSection">
+      <div class="headingText color1">
         Prolonged Exposure Collective Sensing System (PECSS)
       </div>
     </div>
@@ -50,7 +51,7 @@
             Outcome
           </span>
           <br>
-          <span class="introTextContent">
+          <span class="textContent">
             Ongoing Project (praise from clinicians
             and veterans so far)
           </span>
@@ -61,7 +62,7 @@
             Role
           </span>
           <br>
-          <span class="introTextContent">
+          <span class="textContent">
             Interviewing clinicians and veterans
             to create the PECSS platform <br><br>
             Developing the platform using Android Studio (Java)
@@ -73,7 +74,7 @@
             Team
           </span>
           <br>
-          <span class="introTextContent">
+          <span class="textContent">
             Dr. Rosa Arriaga,
             Catherine Deeter,
             Hayley Evans,
@@ -81,7 +82,7 @@
             Adam Hayward,
             Dr. Thomas Ploetz,
             Peter Presti,
-            Marcus Wilder,
+            Marcus Wilder
 
           </span>
         </div>
@@ -91,7 +92,7 @@
             Tools
           </span>
           <br>
-          <span class="introTextContent">
+          <span class="textContent">
             Qualtrics, Sketch, Android Studio, Java, JavaScript
           </span>
         </div>
@@ -103,23 +104,23 @@
 
             <div class="row">
 
-              <div class="col-sm-3 introTextHeading2">
 
-                User Research<br>
-                <span class="introTextContent">
-                  4 months<br>
-                  <div class="timelineBar bcolor1"></div>
+              <div class="col-sm-4 introTextHeading2">
+                Research<br>
+                <span class="textContent">
+                  6 months<br>
+                  <div class="timelineBar bcolor2"></div>
                   Performing formative research with clinicians and veterans
                   to design the platform
                 </span>
               </div>
 
-              <div class="col-sm-2 introTextHeading2">
 
-                Analysis<br>
-                <span class="introTextContent">
-                  1 month<br>
-                  <div class="timelineBar bcolor2"></div>
+              <div class="col-sm-3 introTextHeading2">
+                Design<br>
+                <span class="textContent">
+                  2 month<br>
+                  <div class="timelineBar bcolor3"></div>
                   Analysing user researchd data
                 </span>
               </div>
@@ -127,7 +128,7 @@
               <div class="col-sm-5 introTextHeading2">
 
                 Android Development<br>
-                <span class="introTextContent">
+                <span class="textContent">
                   10 months<br>
                   <div class="timelineBar bcolor4"></div>
                   Completed the development of the first version
@@ -136,20 +137,8 @@
                 </span>
               </div>
 
-              <div class="col-sm-2 introTextHeading2">
-
-                Literature Review<br>
-                <span class="introTextContent">
-                  1 month<br>
-                  <div class="timelineBar bcolor5"></div>
-                  Understanding previous literature
-                </span>
-              </div>
-
             </div>
 
-            <div class="row">
-            </div>
 
         </div>
         </div>
@@ -158,10 +147,201 @@
 
     <div class="line"></div>
 
+    <div class="headingSection color1">
+      Context
+    </div>
+
+    <div class="textContent">
+      <!-- Post Traumatic Stress Disorder (PTSD) is a trauma and stressor-related
+      disorder defined by the following symptom clusters:
+      <ul>
+        <li>Trauma re-experiencing (intrusive memories and nightmares)
+        <li>Avoidance of trauma-related situations, thoughts, and feelings
+        <li>Negative alterations in thoughts and mood
+        <li>Hyperarousal ​
+      </ul> -->
+      <span class="color1">Post Traumatic Stress Disorder (PTSD) is a chronic condition marked by considerable distress and dysfunction​.</span>
+      Fortunately, evidence-based treatments exist for PTSD.
+      Among the many pharmacological and psychotherapy approaches that have been
+      used to treat PTSD, <span class="color1"> Prolonged Exposure (PE) therapy ​has the best evidence for
+      therapeutic efficacy.</span>
+    </div>
+
+
+    <div class="textQuote">
+      "However, the delivery of PE Therapy has
+      been constrained by data collected from patient self-report and
+      clinician intuition. This data is subjective and narrow, functioning
+      as an ever-present obstacle in the practice, training, and
+      psychotherapy delivery."<br>
+    </div>
+
+
+    <div class="textContent">
+      Clinicians who treat mental illness are in urgent need of
+      methods, tools, and data to efficiently track, assess, and respond
+      to mental health needs throughout the treatment process.
+      Patients need tools that provide feedback to optimize their therapeutic exercises.
+    </div>
+
+    <div class="textQuote">"We propose to transform mental health assessment and care through
+      enhancing these clinical practices with data-driven approaches."
+    </div>
+
+    <div class="textContent">
+      I joined this project in August 2019, when I joined the Ubicomp Lab
+      as a Graduate Research Assistant with Dr. Rosa Arriaga.
+      <span class="color1"> My work focuses on designing and developing the
+      patient-facing application. We are collaborating with Emory University
+      for PE Therapy expertise and Rochester University for Natural
+      Language Processing. </span> This project is funded by the National
+      Science Foundation (NSF).
+    </div>
+
+
+  <div class="line"></div>
+
+  <div class="headingSection color1">
+    Research
   </div>
 
 
+  <div class="subheadingSection">
+    1. Understanding the Prolonged Exposure (PE) Therapy
+  </div>
+
+
+  <div class="textContent">
+    <span class="color1"> The first step in understanding the PE Therapy was to read through
+    the PE manuals used by therapists. </span> The treatment and manuals are designed
+    for use by a therapist familiar with cognitive behavior therapy and (CBT)
+    or who underwent intensive workshops for prolonged exposure by experts in
+    this therapy. The manual guides therapists and counselors to implement this
+     brief CBT program that targets PTSD following various types of trauma.
+  </div>
+
+
+  <div class="contentImageSimple">
+    <img src="../images/pecss/manuals.jpg">
+  </div>
+
+
+  <div class="textContent">
+    Even though the therapy followed by each patient undergoing PE therapy is
+    unique in some way, there is a lot of structure that has to be followed by
+    the clinicians. <span class="color1"> After reading the manual, guide, and
+    workbooks, I was able to formulate a typical PE workflow.</span>
+  </div>
+
+
+
+  <div class="row rowContent" style="justify-content:center">
+
+    <div class="col-sm-2 introTextHeading" align="center">
+      Patient Health Questionnaire <br><br>
+      <img src="../images/pecss/flow/phq9.svg" class="contentImageRow pecssRowImage1">
+      <div class="textContent" align="left">
+        The Patient Health Questionnaire (PHQ)
+        is a self-administered tool for assessing depression.
+      </div>
+    </div>
+
+    <div class="col-sm-2 introTextHeading" align="center">
+      Individual Therapy Session <br>
+      <img src="../images/pecss/flow/record.svg" class="contentImageRow pecssRowImage2">
+      <div class="textContent" align="left">
+        A one-on-one therapy session where the patient records their
+        traumatic experience in their own words towards the end.
+      </div>
+    </div>
+
+    <div class="col-sm-2 introTextHeading" align="center">
+      Group Therapy Session <br><br>
+      <img src="../images/pecss/flow/group.svg" class="contentImageRow pecssRowImage3">
+      <div class="textContent" align="left">
+        A group therapy session where the patients discuss and formulate a
+        list of tasks in increasing order stress specific to their experience.
+      </div>
+    </div>
+
+    <div class="col-sm-2 introTextHeading" align="center">
+      Homework Type 1: Imaginal <br>
+      <img src="../images/pecss/flow/imaginal.svg" class="contentImageRow pecssRowImage4">
+      <div class="textContent" align="left">
+        A homework session where the patient has to listen to the audio
+        recorded in the individual therapy session without any distractions.
+      </div>
+    </div>
+
+    <div class="col-sm-2 introTextHeading" align="center">
+      Homework Type 2: In-Vivo <br><br>
+      <img src="../images/pecss/flow/invivo.svg" class="contentImageRow pecssRowImage5">
+      <div class="textContent" align="left">
+         One or more homework activities that the patient has to perform as
+         per their discussion in the group therapy session.
+      </div>
+    </div>
+
+  </div>
+
+  <div class="textContent">
+    After understanding the PE workflow, I asked our primary contact at Emory
+    University, a clinical psychologist who works with PTSD patients,
+    if they used any existing technology for Prolonged Exposure Therapy -
+    PE Coach. They told me that <span class="color1">  PE Coach (mobile
+    phone application) had helpful features but was not usable at all. </span>
+    So, I decided to investigate it myself.
+  </div>
+
+  <div class="container-fixed stacked-cards stacked-cards-slide">
+			<ul>
+				<li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+				<li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+				<li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+				<li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+				<li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+				<li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+        <li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+        <li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+        <li>
+          <img src="../images/pecss/pecoach/start.png">
+				</li>
+			</ul>
+		</div>
+
+
+  </div>
+
+
+
+  <script src="../js/stackedCards.min.js"></script>
   <script src="../js/mainScript.js"></script>
+
+  <script>
+		var stackedCardSlide = new stackedCards({
+		 	selector: '.stacked-cards-slide',
+		 	layout: "slide",
+		 	transformOrigin: "center",
+		 });
+
+		stackedCardSlide.init();
+	</script>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
