--- a/updated/projectPages/pecss.html
+++ b/updated/projectPages/pecss.html
@@ -296,31 +296,31 @@
   <div class="container-fixed stacked-cards stacked-cards-slide">
 			<ul>
 				<li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/1.png">
 				</li>
 				<li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/2.png">
 				</li>
 				<li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/3.png">
 				</li>
 				<li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/4.png">
 				</li>
 				<li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/5.png">
 				</li>
 				<li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/6.png">
 				</li>
         <li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/7.png">
 				</li>
         <li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/8.png">
 				</li>
         <li>
-          <img src="../images/pecss/pecoach/start.png">
+          <img src="../images/pecss/pecoach/9.png">
 				</li>
 			</ul>
 		</div>
