--- a/updated/projectPages/pecss.html
+++ b/updated/projectPages/pecss.html
@@ -285,12 +285,17 @@
   </div>
 
   <div class="textContent">
-    After understanding the PE workflow, I asked our primary contact at Emory
-    University, a clinical psychologist who works with PTSD patients,
-    if they used any existing technology for Prolonged Exposure Therapy -
-    PE Coach. They told me that <span class="color1">  PE Coach (mobile
-    phone application) had helpful features but was not usable at all. </span>
-    So, I decided to investigate it myself.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Quisque dapibus nulla augue, vitae cursus lectus sollicitudin
+    venenatis. Aliquam erat volutpat. Sed malesuada nunc odio, nec
+    convallis augue blandit quis. Morbi sit amet nisi varius enim
+    molestie aliquam. Aliquam maximus pharetra orci quis porta. Nunc maximus
+    diam magna. Curabitur maximus auctor rutrum. Morbi in ultrices leo.
+    Praesent ut maximus mi. <span class="color1"> Phasellus dignissim mattis dolor, quis
+    rutrum augue varius a. Class aptent taciti sociosqu ad litora torquent
+    per conubia nostra, per inceptos himenaeos. </span> Vivamus ullamcorper auctor 
+    libero, sed ultrices sem congue nec. Nulla elit ex, malesuada in nibh
+    et, luctus congue urna.
   </div>
 
   <div class="container-fixed stacked-cards stacked-cards-slide">
@@ -323,7 +328,23 @@
           <img src="../images/pecss/pecoach/9.png">
 				</li>
 			</ul>
-		</div>
+	</div>
+
+
+  <div class="subheadingSection">
+    2. The Outpatient Program at Emory
+  </div>
+
+  <div class="textContent">
+    After understanding the PE workflow, I asked our primary contact at Emory
+    University, a clinical psychologist who works with PTSD patients,
+    if they used any existing technology for Prolonged Exposure Therapy -
+    PE Coach. They told me that <span class="color1">  PE Coach (existing mobile
+    phone application) had helpful features but was not used. </span>
+    So, I decided to investigate why.
+  </div>
+
+
 
 
   </div>
