--- a/updated/projectPages/pecss.html
+++ b/updated/projectPages/pecss.html
@@ -13,9 +13,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" type="text/css" href="../css/stackedCards.css">
   <link rel="stylesheet" type="text/css" href="../css/mainStyle.css">
   <link rel="stylesheet" type="text/css" href="../css/pageStyle.css">
-  <link rel="stylesheet" type="text/css" href="../css/stackedCards.css">
 
 </head>
 <body>
@@ -229,73 +229,75 @@
   <div class="textContent">
     Even though the therapy followed by each patient undergoing PE therapy is
     unique in some way, there is a lot of structure that has to be followed by
-    the clinicians. <span class="color1"> After reading the manual, guide, and
-    workbooks, I was able to formulate a typical PE workflow.</span>
+    the clinicians. <span class="color1"> After reading the manual, guide,
+    and workbooks, I was able to formulate a standard PE workflow.
+    A typical PE therapy lasts 9 days and here is a day in the life
+    of a patient.</span>
   </div>
 
 
+  <div class="contentImageSimple">
+    <img src="../images/pecss/schedule.png">
+  </div>
 
-  <div class="row rowContent" style="justify-content:center">
 
-    <div class="col-sm-2 introTextHeading" align="center">
-      Patient Health Questionnaire <br><br>
+  <!-- <div class="row rowContent" style="justify-content:center">
+
+    <div class="col-6 col-md-2 introTextHeading" align="center">
       <img src="../images/pecss/flow/phq9.svg" class="contentImageRow pecssRowImage1">
+      Patient Health Questionnaire
       <div class="textContent" align="left">
         The Patient Health Questionnaire (PHQ)
         is a self-administered tool for assessing depression.
       </div>
     </div>
 
-    <div class="col-sm-2 introTextHeading" align="center">
-      Individual Therapy Session <br>
+    <div class="col-6 col-md-2 introTextHeading" align="center">
       <img src="../images/pecss/flow/record.svg" class="contentImageRow pecssRowImage2">
+      Individual Therapy Session
       <div class="textContent" align="left">
         A one-on-one therapy session where the patient records their
         traumatic experience in their own words towards the end.
       </div>
     </div>
 
-    <div class="col-sm-2 introTextHeading" align="center">
-      Group Therapy Session <br><br>
+    <div class="col-6 col-md-2 introTextHeading" align="center">
       <img src="../images/pecss/flow/group.svg" class="contentImageRow pecssRowImage3">
+      Group Therapy Session
       <div class="textContent" align="left">
         A group therapy session where the patients discuss and formulate a
         list of tasks in increasing order stress specific to their experience.
       </div>
     </div>
 
-    <div class="col-sm-2 introTextHeading" align="center">
-      Homework Type 1: Imaginal <br>
+    <div class="col-6 col-md-2 introTextHeading" align="center">
       <img src="../images/pecss/flow/imaginal.svg" class="contentImageRow pecssRowImage4">
+            Homework Type 1: Imaginal
       <div class="textContent" align="left">
         A homework session where the patient has to listen to the audio
         recorded in the individual therapy session without any distractions.
       </div>
     </div>
 
-    <div class="col-sm-2 introTextHeading" align="center">
-      Homework Type 2: In-Vivo <br><br>
+    <div class="col-6 col-md-2 introTextHeading" align="center">
       <img src="../images/pecss/flow/invivo.svg" class="contentImageRow pecssRowImage5">
+      Homework Type 2: In-Vivo
       <div class="textContent" align="left">
          One or more homework activities that the patient has to perform as
          per their discussion in the group therapy session.
       </div>
     </div>
 
-  </div>
+  </div> -->
+
 
   <div class="textContent">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Quisque dapibus nulla augue, vitae cursus lectus sollicitudin
-    venenatis. Aliquam erat volutpat. Sed malesuada nunc odio, nec
-    convallis augue blandit quis. Morbi sit amet nisi varius enim
-    molestie aliquam. Aliquam maximus pharetra orci quis porta. Nunc maximus
-    diam magna. Curabitur maximus auctor rutrum. Morbi in ultrices leo.
-    Praesent ut maximus mi. <span class="color1"> Phasellus dignissim mattis dolor, quis
-    rutrum augue varius a. Class aptent taciti sociosqu ad litora torquent
-    per conubia nostra, per inceptos himenaeos. </span> Vivamus ullamcorper auctor 
-    libero, sed ultrices sem congue nec. Nulla elit ex, malesuada in nibh
-    et, luctus congue urna.
+    After understanding the PE workflow, I asked our primary contact at Emory
+    University, a clinical psychologist who works with PTSD patients,
+    if they used any existing technology for Prolonged Exposure Therapy -
+    PE Coach. They told me that <span class="color1">  PE Coach (existing mobile
+    phone application) had helpful features but was not used. </span>
+    So, I decided to investigate why.
   </div>
 
   <div class="container-fixed stacked-cards stacked-cards-slide">
@@ -336,14 +338,121 @@
   </div>
 
   <div class="textContent">
-    After understanding the PE workflow, I asked our primary contact at Emory
-    University, a clinical psychologist who works with PTSD patients,
-    if they used any existing technology for Prolonged Exposure Therapy -
-    PE Coach. They told me that <span class="color1">  PE Coach (existing mobile
-    phone application) had helpful features but was not used. </span>
-    So, I decided to investigate why.
+    Even though I understood the basics of PE Therapy,
+    <span class="color1">there were some gaps in my knowledge. It was
+    important to understand the specifics of the Outpatient Program
+    at Emory. I conducted 3 semi-structured interviews with clinical
+    psychologists who treat PTSD patients using PE therapy daily. </span>
+    I enquired about the following:
   </div>
 
+<!--
+  <div class="textContent">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Quisque dapibus nulla augue, vitae cursus lectus sollicitudin
+    venenatis. Aliquam erat volutpat. Sed malesuada nunc odio, nec
+    convallis augue blandit quis. Morbi sit amet nisi varius enim
+    molestie aliquam. Aliquam maximus pharetra orci quis porta. Nunc maximus
+    diam magna. Curabitur maximus auctor rutrum. Morbi in ultrices leo.
+    Praesent ut maximus mi. <span class="color1"> Phasellus dignissim mattis dolor, quis
+    rutrum augue varius a. Class aptent taciti sociosqu ad litora torquent
+    per conubia nostra, per inceptos himenaeos. </span> Vivamus ullamcorper auctor
+    libero, sed ultrices sem congue nec. Nulla elit ex, malesuada in nibh
+    et, luctus congue urna.
+  </div> -->
+
+
+  <div class="row rowContent" style="justify-content:center">
+
+
+    <div class="col-md-6 introTextHeading tableSpacing">
+      <img src="../images/pecss/flow/phq9.svg" class="contentImageRow pecssRowImage1"  align="center">
+      Feature Prioritization
+      <div class="textContent">
+        To determine the features necessary (high development cost)
+        for PE therapy and add data collection.
+      </div>
+    </div>
+
+    <div class="col-md-6 introTextHeading tableSpacing">
+      <img src="../images/pecss/flow/phq9.svg" class="contentImageRow pecssRowImage1"  align="center">
+      Data Transparency
+      <div class="textContent">
+        The Patient Health Questionnaire (PHQ)
+        is a self-administered tool for assessing depression.
+      </div>
+    </div>
+
+    <div class="col-md-6 introTextHeading tableSpacing">
+      <img src="../images/pecss/flow/phq9.svg" class="contentImageRow pecssRowImage1"  align="center">
+      Homework Determination
+      <div class="textContent">
+        The Patient Health Questionnaire (PHQ)
+        is a self-administered tool for assessing depression.
+      </div>
+    </div>
+
+    <div class="col-md-6 introTextHeading tableSpacing">
+      <img src="../images/pecss/flow/phq9.svg" class="contentImageRow pecssRowImage1"  align="center">
+      Time Dependency
+      <div class="textContent">
+        The Patient Health Questionnaire (PHQ)
+        is a self-administered tool for assessing depression.
+      </div>
+    </div>
+
+    <div class="col-md-6 introTextHeading tableSpacing">
+      <img src="../images/pecss/flow/phq9.svg" class="contentImageRow pecssRowImage1"  align="center">
+      Homework Flexibility
+      <div class="textContent">
+        The Patient Health Questionnaire (PHQ)
+        is a self-administered tool for assessing depression.
+      </div>
+    </div>
+
+    <div class="col-md-6 introTextHeading tableSpacing">
+      <img src="../images/pecss/flow/phq9.svg" class="contentImageRow pecssRowImage1"  align="center">
+      Audio Management
+      <div class="textContent">
+        To discuss how audio should be stored and accessed on a
+        mobile phone device
+      </div>
+    </div>
+
+
+  </div>
+
+
+  <div class="subheadingSection">
+    3. Themes
+  </div>
+
+
+  <div class="line"></div>
+
+  <div class="headingSection color1">
+    Design
+  </div>
+
+
+  <div class="subheadingSection">
+    1. System Design
+  </div>
+
+  <div class="subheadingSection">
+    2. Low-Fi Mockups
+  </div>
+
+  <div class="subheadingSection">
+    3. High-Fi Design
+  </div>
+
+
+  <div class="line"></div>
+
+  <div class="headingSection color1">
+    Development
+  </div>
 
 
 
