--- a/updated/projectPages/pecss.html
+++ b/updated/projectPages/pecss.html
@@ -362,7 +362,7 @@
   </div> -->
 
 
-  <div class="row rowContent" style="justify-content:center">
+  <!-- <div class="row rowContent" style="justify-content:center">
 
 
     <div class="col-md-6 introTextHeading tableSpacing">
@@ -420,12 +420,150 @@
     </div>
 
 
+  </div> -->
+
+  <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Line of Questioning</th>
+      <th scope="col">Purpose</th>
+      <th scope="col">Summary of Answers</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Feature Prioritization</td>
+      <td>To determine the features necessary (high development cost)
+        for PE therapy and add data collection.</td>
+      <td>
+        Necessary Features
+        <ul>
+          <li> Secure Login
+          <li> Data Encryption
+          <li> Manage Assignments
+          <li> Record Sessions
+          <li> Complete Homeworks
+          <li> Visualize Data
+        </ul>
+
+        Nice-To-Have Features
+        <ul>
+          <li> Add notes to In-Vivo sessions
+          <li> Scrub through audio during Imaginal sessions
+        </ul>
+
+        Distant Future Features
+        <ul>
+          <li> Breathing Tool
+          <li> Reading List
+        </ul>
+
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Data Transparency</td>
+      <td>To know about the different levels of data visibility for patients and clinicians.
+      </td>
+      <td> There should be complete data visibility for both patients and clinicians.
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Homework Determination</td>
+      <td>To understand who can assign homework to a patient
+      </td>
+      <td>At Emory, the patients control their therapy so both the patients and the clinicians
+       can assign homework.
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">4</th>
+      <td>Time Dependency</td>
+      <td>To understand how the hour of completion of an assignment affects the therapy
+      </td>
+      <td>The patient should have the flexibility to complete the assignment at any hour,
+      but the system should know and display when it was completed.</td>
+    </tr>
+    <tr>
+      <th scope="row">5</th>
+      <td>Homework Flexibility</td>
+      <td>To determine how if the application should impose various restrictions on the patient
+      </td>
+      <td>The system should impose minimum restrictions and provide as much control/flexibility
+      to the patient as possible.</td>
+    </tr>
+    <tr>
+      <th scope="row">6</th>
+      <td>Audio Management</td>
+      <td>To discuss how data should be stored and accessed on a mobile phone device
+      </td>
+      <td>The data has to be encrypted in storage and transfer. There will be no audio transfer
+        because the cost of data infilteration/loss is too high.
+      </td>
+    </tr>
+  </tbody>
+</table>
+
+
+
+  <div class="subheadingSection">
+    3. Mock Patient Sessions
   </div>
 
 
   <div class="subheadingSection">
-    3. Themes
+    4. Themes
   </div>
+
+  <div class="textContent">
+    After concluding my research,
+    <span class="color1">I used affinity modeling to combine
+    the information and found 4 common themes.</span>
+  </div>
+
+  <div class="row rowContent" style="justify-content:center">
+
+    <div class="col-md-6 tableSpacing">
+      <img src="../images/pecss/themes/safety.svg" class="contentImageRow">
+      <div class="introTextHeading" align="left"> SAFETY </div>
+      <div class="textContent" align="left">
+         The patients should feel safe while enrolled in the therapy.
+      </div>
+    </div>
+
+    <div class="col-md-6 tableSpacing">
+      <img src="../images/pecss/themes/transparency.svg" class="contentImageRow">
+      <div class="introTextHeading" align="left"> TRANSPARENCY </div>
+      <div class="textContent" align="left">
+        The patients should be aware of the therapy process and
+        should have complete access to all their data.
+      </div>
+    </div>
+
+    <div class="col-md-6 tableSpacing">
+      <img src="../images/pecss/themes/flexibility.svg" class="contentImageRow">
+      <div class="introTextHeading" align="left"> FLEXIBILITY </div>
+      <div class="textContent" align="left">
+        The patients can choose to complete assigned homework and can
+        undertake previous or future tasks whenever they want.
+      </div>
+    </div>
+
+    <div class="col-md-6 tableSpacing">
+      <img src="../images/pecss/themes/control.svg" class="contentImageRow">
+      <div class="introTextHeading" align="left"> CONTROL </div>
+      <div class="textContent" align="left">
+        The patients choose and assign their homework according
+        to their comfort levels.
+      </div>
+    </div>
+
+  </div>
+
+
 
 
   <div class="line"></div>
