--- a/updated/projectPages/pecss.html
+++ b/updated/projectPages/pecss.html
@@ -574,8 +574,41 @@
 
 
   <div class="subheadingSection">
-    1. System Design
+    1. System Architecture
   </div>
+
+  <div class="textContent">
+    I knew we needed to augment the PE Therapy using data so I tried to capture
+    data from all facets of the patient's life without introducing any privacy
+    concerns. <span class="color1"> The PECSS system encourages patients to share all data streams but
+    they can choose to opt-out of as many data streams as they want.
+    All the data captured is encrypted and not available to anyone except
+    the patient and the clinician.  </span>
+  </div>
+
+  <div class="contentImageSimpleSmaller">
+    <img src="../images/pecss/data.png">
+  </div>
+
+  <div class="textContent">
+
+
+    It is important to note that the data is captured only
+    during the homework session. The architecture below describes
+    how each data is collected and displayed.
+    <span class="color1"> The patient is
+    encouraged to use their smartphone and we provide them with a
+    Fitbit to capture biological data. They also receive login
+    details to a smartphone app to manage their therapy and the
+    same login details can be used to view their progress on the dashboard.
+    </span>
+
+  </div>
+
+  <div class="contentImageSimpleSmaller">
+    <img src="../images/pecss/system.png">
+  </div>
+
 
   <div class="subheadingSection">
     2. Low-Fi Mockups
