--- a/updated/projectPages/pecss.html
+++ b/updated/projectPages/pecss.html
@@ -508,14 +508,14 @@
 </table>
 
 
-
+<!--
   <div class="subheadingSection">
     3. Mock Patient Sessions
-  </div>
+  </div> -->
 
 
   <div class="subheadingSection">
-    4. Themes
+    3. Themes
   </div>
 
   <div class="textContent">
