--- a/updated/projectPages/pecss.html
+++ b/updated/projectPages/pecss.html
@@ -422,7 +422,7 @@
 
   </div> -->
 
-  <table class="table">
+<table class="table">
   <thead>
     <tr>
       <th scope="col">#</th>
@@ -586,7 +586,7 @@
     the patient and the clinician.  </span>
   </div>
 
-  <div class="contentImageSimpleSmaller">
+  <div class="contentImageSimpleSmaller2">
     <img src="../images/pecss/data.png">
   </div>
 
@@ -611,11 +611,83 @@
 
 
   <div class="subheadingSection">
-    2. Low-Fi Mockups
+    2. Low-Fi
   </div>
 
+  <div class="textContent">
+    In terms of UI design, my job is to create the patient-facing
+    interface for managing their therapy, i.e. the smartphone application.
+    <span class="color1"> Based on all my previous research,
+    I created the following Low-Fidelity Mockups. </span>
+    </span>
+  </div>
+
+
+  <div class="contentImageSimple">
+    <img src="../images/pecss/lowfi.png">
+  </div>
+
+
+  <div class="textContent">
+    <span class="color1"> I used to Mockups to conduct 4 remote think-aloud sessions
+    with experienced psychologists across the United States. </span>
+    The tasks for these sessions were chosen to cover all the functionalities
+    of the application. After the session, they were asked a series of
+    questions concerning PE Therapy in their particular hospitals/centers.
+    Here are the combined notes from 1 task out of 9 that the clinicians were
+    asked to perform:
+    </span>
+  </div>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Task</th>
+        <th scope="col">Notes</th>
+        <th scope="col">Category</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Android Application</td>
+        <td>The app is used by the patients to manage their therapy
+          - Login, Add/View/Perform assigned homework, and upload data.
+          It uses native phone sensors to collect user data, secure it using
+          AES, and then upload it to the server using HTTPS.</td>
+        <td>Java, SQL</td>
+        <td>Android Studio</td>
+        <td>5,000+</td>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>SMS</td>
+        <td>The patient provides phone numbers of 2-3 people close to
+          them, we send them automated SMS texts to
+          ask about their interaction with the patient. </td>
+        <td>Python, SQL</td>
+        <td>Twilio API</td>
+        <td>200+</td>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Fitbit</td>
+        <td>The Fitbit is used to collect biological markers of
+          stress such as heartbeat, movement, etc. </td>
+        <td>Python</td>
+        <td>Fitbit API</td>
+        <td>100+</td>
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
+
+
   <div class="subheadingSection">
-    3. High-Fi Design
+    3. High-Fi
   </div>
 
 
@@ -625,10 +697,88 @@
     Development
   </div>
 
-
-
+  <div class="textContent">
+    I have been working on 3 core components in terms of development.
+    While developing these features, it is important to note that all
+    the data we collect should be secured on their device, during
+    transfer, and the server.
   </div>
 
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Component</th>
+        <th scope="col">Purpose</th>
+        <th scope="col">Language</th>
+        <th scope="col">Platform/API</th>
+        <th scope="col">Lines</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>Android Application</td>
+        <td>The app is used by the patients to manage their therapy
+          - Login, Add/View/Perform assigned homework, and upload data.
+          It uses native phone sensors to collect user data, secure it using
+          AES, and then upload it to the server using HTTPS.</td>
+        <td>Java, SQL</td>
+        <td>Android Studio</td>
+        <td>5,000+</td>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>SMS</td>
+        <td>The patient provides phone numbers of 2-3 people close to
+          them, we send them automated SMS texts to
+          ask about their interaction with the patient. </td>
+        <td>Python, SQL</td>
+        <td>Twilio API</td>
+        <td>200+</td>
+        </td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Fitbit</td>
+        <td>The Fitbit is used to collect biological markers of
+          stress such as heartbeat, movement, etc. </td>
+        <td>Python</td>
+        <td>Fitbit API</td>
+        <td>100+</td>
+        </td>
+      </tr>
+
+    </tbody>
+  </table>
+
+
+  <div class="line"></div>
+
+
+  <div class="headingSection">
+    <span class="txt anim-text-flow">Looking Back</span>
+  </div>
+
+  <div class="textContent">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    Quisque dapibus nulla augue, vitae cursus lectus sollicitudin
+    venenatis. Aliquam erat volutpat. Sed malesuada nunc odio, nec
+    convallis augue blandit quis. Morbi sit amet nisi varius enim
+    molestie aliquam. Aliquam maximus pharetra orci quis porta. Nunc maximus
+    diam magna. Curabitur maximus auctor rutrum. Morbi in ultrices leo.
+    Praesent ut maximus mi. <span class="color1"> Phasellus dignissim mattis dolor, quis
+    rutrum augue varius a. Class aptent taciti sociosqu ad litora torquent
+    per conubia nostra, per inceptos himenaeos. </span> Vivamus ullamcorper auctor
+    libero, sed ultrices sem congue nec. Nulla elit ex, malesuada in nibh
+    et, luctus congue urna.
+  </div>
+
+
+
+  <!-- End div for container -->
+  </div>
 
 
   <script src="../js/stackedCards.min.js"></script>
