--- a/projectPages/virtual.html
+++ b/projectPages/virtual.html
@@ -233,36 +233,55 @@
   <div class="row rowContent" >
 
     <div class="col-md-4 tableSpacing2 contentImageApplications">
-      <img src="../images/virtual/bricks/b1.png">
-      <div class="introTextHeading" align="center"> Flying Dragon </div>
+      <img src="../images/virtual/bricks/b7.png">
+      <div class="textContent" align="left">
+        It determines the absolute position and the orientation of
+        custom-made controllers.
+      </div>
     </div>
     <div class="col-md-4 tableSpacing2 contentImageApplications">
       <img src="../images/virtual/bricks/b2.png">
-      <div class="introTextHeading" align="center"> Slingshot </div>
+      <div class="textContent" align="left">
+        The brick facilitates rotational sensing and actuation
+        using a servo motor.
+      </div>
     </div>
     <div class="col-md-4 tableSpacing2 contentImageApplications">
       <img src="../images/virtual/bricks/b3.png">
-      <div class="introTextHeading" align="center"> Shooting Game </div>
+      <div class="textContent" align="left">
+      The combination enables rotation interaction between two LEGO bricks. </div>
     </div>
     <div class="col-md-4 tableSpacing2 contentImageApplications">
       <img src="../images/virtual/bricks/b4.png">
-      <div class="introTextHeading" align="center"> Fishing </div>
+      <div class="textContent" align="left">
+      The Retraction Brick adds retraction functionality to
+      the linear translation using a thread.
+    </div>
     </div>
     <div class="col-md-4 tableSpacing2 contentImageApplications">
       <img src="../images/virtual/bricks/b5.png">
-      <div class="introTextHeading" align="center"> VRGoniometer </div>
-    </div>
-    <div class="col-md-4 tableSpacing2 contentImageApplications">
-      <img src="../images/virtual/bricks/b6.png">
-      <div class="introTextHeading" align="center"> Disco </div>
-    </div>
-    <div class="col-md-4 tableSpacing2 contentImageApplications">
-      <img src="../images/virtual/bricks/b7.png">
-      <div class="introTextHeading" align="center"> Haptopbend </div>
+      <div class="textContent" align="left">
+      The brick uses a proximity sensor to sense
+      the linear translation interaction two bricks.  </div>
     </div>
     <div class="col-md-4 tableSpacing2 contentImageApplications">
       <img src="../images/virtual/bricks/b8.png">
-      <div class="introTextHeading" align="center"> TASC </div>
+      <div class="textContent" align="left">
+      The set of Lock Bricks provides locking and unlocking
+      functionality using a servo motor. </div>
+    </div>
+    <div class="col-md-4 tableSpacing2 contentImageApplications">
+      <img src="../images/virtual/bricks/b1.png">
+      <div class="textContent" align="left">
+      The Vibration Brick provides haptic feedback in the form of vibration.
+      It contains a vibration motor attached to its wall. </div>
+    </div>
+
+    <div class="col-md-4 tableSpacing2 contentImageApplications">
+      <img src="../images/virtual/bricks/b6.png">
+      <div class="textContent" align="left">
+      The Button Brick contains a push button that protrudes out
+      from the brick through a window.  </div>
     </div>
 
   </div>
