--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="row">
 
-      <div class="col-12 col-lg-6 " id="cardPECSS">
+      <div class="col-12 col-lg-6 cardSpacing" id="cardPECSS">
         <a href="projectPages/pecss.html">
           <div class="projectCard project1" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
             <span class="cardTitleMain cardTitleColor1"> PECSS </span>
@@ -116,7 +116,7 @@
 
 
 
-      <div class="col-12 col-lg-6" id="cardVirtual">
+      <div class="col-12 col-lg-6 cardSpacing" id="cardVirtual">
         <a href="projectPages/virtual.html">
           <div class="projectCard project2" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
             <span class="cardTitleMain cardTitleColor2"> VIRTUAL BRICKS </span>
@@ -140,7 +140,7 @@
 
 
 
-      <div class="col-12 col-lg-6" id="cardNCR">
+      <div class="col-12 col-lg-6 cardSpacing" id="cardNCR">
         <a href="projectPages/ncr.html">
           <div class="projectCard project3" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
             <span class="cardTitleMain cardTitleColor3"> NCR </span>
@@ -162,7 +162,7 @@
         </a>
       </div>
 
-      <div class="col-12 col-lg-6" id="cardLameBot">
+      <div class="col-12 col-lg-6 cardSpacing" id="cardLameBot">
         <a href="projectPages/lamebot.html">
           <div class="projectCard project4" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
             <span class="cardTitleMain cardTitleColor4"> LAMEBOT </span>
@@ -185,7 +185,7 @@
       </div>
 
 
-      <div class="col-12 col-lg-6" id="cardMime">
+      <div class="col-12 col-lg-6 cardSpacing" id="cardMime">
         <a href="projectPages/mime.html">
           <div class="projectCard project5" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
             <span class="cardTitleMain cardTitleColor5"> MIME </span>
@@ -208,7 +208,7 @@
         </a>
       </div>
 
-      <div class="col-12 col-lg-6" id="cardBrailleIO">
+      <div class="col-12 col-lg-6 cardSpacing" id="cardBrailleIO">
         <a href="projectPages/braille.html">
           <div class="projectCard project6" onmouseover="hoverEnter(this)" onmouseout="hoverExit(this)">
             <span class="cardTitleMain cardTitleColor6"> BRAILLE IO </span>
