--- a/projectPages/pecss.html
+++ b/projectPages/pecss.html
@@ -76,7 +76,6 @@
           </span>
           <br>
           <span class="textContent">
-            Dr. Rosa Arriaga,
             Catherine Deeter,
             Hayley Evans,
             Varnit Jain,
@@ -97,6 +96,23 @@
             Qualtrics, Sketch, Android Studio, Java, JavaScript, Python
           </span>
         </div>
+
+        <div class="col-12 col-md-3 introContent">
+          <span class="introTextHeading">
+            National Science Foundation
+          </span>
+          <br>
+          <span class="textContent">
+            Principal Investigator: Dr. Rosa Arriaga
+            <div class="nsf_image">
+                <img src="../images/pecss/nsf_logo.png">
+            </div>
+            Graduate Research Assistantship supported by NSF 1915504 since
+            August 2019.
+          </span>
+        </div>
+
+
 
         <div class="col-12 introContent" style="padding-top: 2rem; padding-bottom: 3rem;">
           <span class="introTextHeading">
