--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
               </div>
             </div>
             <div class="impactText">
-              <span class="cardTitleMain cardTitleColor1" align="right" width="100%"> Master's Thesis </span>
+              <!-- <span class="cardTitleMain cardTitleColor1" align="right" width="100%"> Master's Thesis </span> -->
+              <div class="cardIconSmall">
+                <img src="coverImages/projectIcons/pecss.png">
+              </div>
             </div>
           </div>
         </a>
@@ -132,7 +135,10 @@
               </div>
             </div>
             <div class="impactText">
-              <span class="cardTitleMain cardTitleColor2" align="right" width="100%"> CHI '19 </span>
+              <!-- <span class="cardTitleMain cardTitleColor2" align="right" width="100%"> CHI '19 </span> -->
+              <div class="cardIconSmall2">
+                <img src="coverImages/projectIcons/virtual.png">
+              </div>
             </div>
           </div>
         </a>
@@ -156,7 +162,10 @@
               </div>
             </div>
             <div class="impactText">
-              <span class="cardTitleMain cardTitleColor3"> Collaboration </span>
+              <!-- <span class="cardTitleMain cardTitleColor3"> Collaboration </span> -->
+              <div class="cardIconSmall4">
+                <img src="coverImages/projectIcons/ncr.png">
+              </div>
             </div>
           </div>
         </a>
@@ -178,7 +187,10 @@
               </div>
             </div>
             <div class="impactText">
-              <span class="cardTitleMain cardTitleColor4"> Demo Inside </span>
+              <!-- <span class="cardTitleMain cardTitleColor4"> Demo Inside </span> -->
+              <div class="cardIconSmall">
+                <img src="coverImages/projectIcons/lame.png">
+              </div>
             </div>
           </div>
         </a>
@@ -202,7 +214,10 @@
               </div>
             </div>
             <div class="impactText">
-              <span class="cardTitleMain cardTitleColor5"> Android Play Store </span>
+              <!-- <span class="cardTitleMain cardTitleColor5"> Android Play Store </span> -->
+              <div class="cardIconSmall3">
+                <img src="coverImages/projectIcons/mime.png">
+              </div>
             </div>
           </div>
         </a>
@@ -225,7 +240,10 @@
               </div>
             </div>
             <div class="impactText">
-              <span class="cardTitleMain cardTitleColor6"> Maker Fair '16 </span>
+              <!-- <span class="cardTitleMain cardTitleColor6"> Maker Fair '16 </span> -->
+              <div class="cardIconSmall5">
+                <img src="coverImages/projectIcons/braille.png">
+              </div>
             </div>
           </div>
         </a>
