--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             </div>
             <div class="impactText">
               <!-- <span class="cardTitleMain cardTitleColor4"> Demo Inside </span> -->
-              <div class="cardIconSmall">
+              <div class="cardIconSmall6">
                 <img src="coverImages/projectIcons/lame.png">
               </div>
             </div>
