--- a/projectPages/pecss.html
+++ b/projectPages/pecss.html
@@ -77,12 +77,14 @@
           </span>
           <br>
           <span class="textContent">
+            Dr. Rosa Arriaga,
             Catherine Deeter,
             Hayley Evans,
             Varnit Jain,
             Adam Hayward,
             Dr. Thomas Ploetz,
             Peter Presti,
+            Dr. Andrew Sherrill,
             Marcus Wilder
 
           </span>
